--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -27196,6 +27196,16 @@ Virtual Machine name
 
 --
 
+*`vsphere.virtualmachine.os`*::
++
+--
+type: keyword
+
+Virtual Machine Operating System name
+
+
+--
+
 *`vsphere.virtualmachine.cpu.used.mhz`*::
 +
 --
