--- a/docs/devguide/contributing.asciidoc
+++ b/docs/devguide/contributing.asciidoc
@@ -47,16 +47,19 @@ Beats].
 The Beats are Go programs, so install the {go-version} version of
 http://golang.org/[Go] which is being used for Beats development.
 
-The location where you clone is important. Please clone under the source
-directory of your `GOPATH`. If you don't have `GOPATH` already set, you can
-simply set it to the `go` directory in your home (`export GOPATH=$HOME/go`).
+After https://golang.org/doc/install[installing Go], set the
+https://golang.org/doc/code.html#GOPATH[GOPATH] environment variable to point to
+your workspace location, and make sure the Go `bin` directory is in your PATH.
+
+The location where you clone is important. Clone the beats repository under the
+source directory of your `GOPATH`. If you don't have `GOPATH` already set, you
+can set it to the `go` directory in your home (`export GOPATH=$HOME/go`).
 
 [source,shell]
---------------------------------------------------------------------------------
+----------------------------------------------------------------------
 mkdir -p ${GOPATH}/src/github.com/elastic
-cd ${GOPATH}/src/github.com/elastic
-git clone https://github.com/elastic/beats.git
---------------------------------------------------------------------------------
+git clone https://github.com/elastic/beats ${GOPATH}/src/github.com/elastic/beats
+----------------------------------------------------------------------
 
 NOTE: If you have multiple go paths, use `${GOPATH%%:*}` instead of `${GOPATH}`.
 
