--- a/metricbeat/docs/modules_list.asciidoc
+++ b/metricbeat/docs/modules_list.asciidoc
@@ -4,7 +4,7 @@ This file is generated! See scripts/docs_collector.py
 
 [options="header"]
 |===================================
-|Modules   |Dashboards   |Metricsets   
+|Modules   |Dashboards   |Metricsets
 |<<metricbeat-module-aerospike,Aerospike>>     |image:./images/icon-no.png[No prebuilt dashboards]    |  
 .1+| .1+|  |<<metricbeat-metricset-aerospike-namespace,namespace>>   
 |<<metricbeat-module-apache,Apache>>     |image:./images/icon-yes.png[Prebuilt dashboards are available]    |  
@@ -167,8 +167,7 @@ This file is generated! See scripts/docs_collector.py
 |<<metricbeat-metricset-windows-service,service>>   
 |<<metricbeat-module-zookeeper,ZooKeeper>>     |image:./images/icon-yes.png[Prebuilt dashboards are available]    |  
 .2+| .2+|  |<<metricbeat-metricset-zookeeper-mntr,mntr>>   
-|<<metricbeat-metricset-zookeeper-server,server>>   
-|================================
+|<<metricbeat-metricset-zookeeper-server,server>>
 
 --
 
@@ -177,6 +176,7 @@ include::modules/apache.asciidoc[]
 include::modules/aws.asciidoc[]
 include::modules/ceph.asciidoc[]
 include::modules/consul.asciidoc[]
+include::modules/coredns.asciidoc[]
 include::modules/couchbase.asciidoc[]
 include::modules/couchdb.asciidoc[]
 include::modules/docker.asciidoc[]
