--- a/metricbeat/docs/modules/coredns.asciidoc
+++ b/metricbeat/docs/modules/coredns.asciidoc
@@ -5,7 +5,7 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-module-coredns]]
 == coredns module
 
-experimental[]
+beta[]
 
 This is the coredns module.
 
