--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -2609,7 +2609,7 @@ Total query count
 
 --
 
-*`coredns.metrics.dns.request.duration.seconds`*::
+*`coredns.metrics.dns.request.duration.sec`*::
 +
 --
 type: long
