Fix mapping issue
Signed-off-by: Chris <chrismarkou92@gmail.com>

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -2583,13 +2583,13 @@ coredns Module
 
 
 [float]
-== metrics fields
+== stats fields
 
 Contains statistics related to the coreDNS service
 
 
 
-*`coredns.metrics.panic.count.total`*::
+*`coredns.stats.panic.count.total`*::
 +
 --
 type: long
@@ -2599,7 +2599,7 @@ Total number of panics
 
 --
 
-*`coredns.metrics.dns.request.count.total`*::
+*`coredns.stats.dns.request.count.total`*::
 +
 --
 type: long
@@ -2609,7 +2609,7 @@ Total query count
 
 --
 
-*`coredns.metrics.dns.request.duration.sec`*::
+*`coredns.stats.dns.request.duration.sec`*::
 +
 --
 type: long
@@ -2621,7 +2621,7 @@ Duration to process each query
 
 --
 
-*`coredns.metrics.dns.request.size.bytes`*::
+*`coredns.stats.dns.request.size.bytes`*::
 +
 --
 type: long
@@ -2633,7 +2633,7 @@ Size of requests in bytes
 
 --
 
-*`coredns.metrics.dns.request.do.count.total`*::
+*`coredns.stats.dns.request.do.count.total`*::
 +
 --
 type: long
@@ -2643,7 +2643,7 @@ Number of queries that have the DO bit set
 
 --
 
-*`coredns.metrics.dns.request.type.count.total`*::
+*`coredns.stats.dns.request.type.count.total`*::
 +
 --
 type: long
@@ -2653,7 +2653,7 @@ Counter of queries per zone and type
 
 --
 
-*`coredns.metrics.dns.request.type`*::
+*`coredns.stats.dns.request.type`*::
 +
 --
 type: keyword
@@ -2663,7 +2663,17 @@ Holds the query type of the request
 
 --
 
-*`coredns.metrics.dns.response.rcode`*::
+*`coredns.stats.dns.response.rcode.count.total`*::
++
+--
+type: long
+
+Counter of responses per zone and rcode
+
+
+--
+
+*`coredns.stats.dns.response.rcode`*::
 +
 --
 type: keyword
@@ -2673,7 +2683,7 @@ Holds the rcode of the response
 
 --
 
-*`coredns.metrics.dns.request.family`*::
+*`coredns.stats.dns.request.family`*::
 +
 --
 type: keyword
@@ -2683,7 +2693,7 @@ The address family of the transport (1 = IP (IP version 4), 2 = IP6 (IP version 
 
 --
 
-*`coredns.metrics.dns.response.size.bytes`*::
+*`coredns.stats.dns.response.size.bytes`*::
 +
 --
 type: long
@@ -2695,17 +2705,7 @@ Response size in bytes
 
 --
 
-*`coredns.metrics.dns.response.rcode.count.total`*::
-+
---
-type: long
-
-Counter of responses per zone and rcode
-
-
---
-
-*`coredns.metrics.server`*::
+*`coredns.stats.server`*::
 +
 --
 type: keyword
@@ -2715,7 +2715,7 @@ The server responsible for the request
 
 --
 
-*`coredns.metrics.zone`*::
+*`coredns.stats.zone`*::
 +
 --
 type: keyword
@@ -2725,12 +2725,13 @@ The zonename used for the request/response
 
 --
 
-*`coredns.metrics.proto`*::
+*`coredns.stats.proto`*::
 +
 --
 type: keyword
 
 The transport of the response ("udp" or "tcp")
+
 
 --
 
@@ -21799,7 +21800,7 @@ type: long
 
 format: bytes
 
-Used memory by the Lua engine.
+Used memory by the Lua engine.        
 
 
 --
@@ -21811,7 +21812,7 @@ type: long
 
 format: bytes
 
-The size in bytes of the dataset
+The size in bytes of the dataset 
 
 
 --
@@ -22056,7 +22057,7 @@ type: long
 
 format: bytes
 
-The size in bytes of copy-on-write allocations during the last RBD save operation
+The size in bytes of copy-on-write allocations during the last RBD save operation                
 
 
 --
@@ -22185,7 +22186,7 @@ type: long
 
 format: bytes
 
-AOF current file size
+AOF current file size             
 
 
 --
@@ -22289,7 +22290,7 @@ Total size in bytes of the replication backlog buffer
 --
 type: long
 
-The master offset of the replication backlog buffer
+The master offset of the replication backlog buffer          
 
 
 --
@@ -26747,3 +26748,4 @@ type: long
 Epoch value of the Zookeeper transaction ID. An epoch signifies the period in which a server is a leader
 
 --
+
