Adding Cisco support for the Syslog parser (#10760)
* Adding Cisco support for the Syslog parser

Add support for the "sequence" number in the log format send by Cisco switch devices.

Fixes: #10654
(cherry picked from commit dd92b6f887c18c40932969d9430be9d54d7f6903)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -39,6 +39,7 @@ https://github.com/elastic/beats/compare/v6.7.2...6.x[Check the HEAD diff]
 
 - Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
 - Fix initialization of the TCP input logger. {pull}11605[11605]
+- Add support for Cisco syslog format used by their switch. {pull}10760[10760]
 
 *Heartbeat*
 
