--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -243,6 +243,8 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add ip fields to default_field in Elasticsearch template. {pull}11035[11035]
 - Gracefully shut down on SIGHUP {pull}10704[10704]
 
+- Add `script` processor that supports using Javascript to process events. {pull}NNNN[NNNN]
+
 *Auditbeat*
 
 - Add system module. {pull}9546[9546]
