Add timeout option to interrupt processor
This adds an optional timeout configuration option to the processor that will
timeout the execution by interrupting the JS code.

I updated the benchmark to test each case with and without the timeout enabled.

    BenchmarkBeatEventV0/Put-12                         2000000           707 ns/op
    BenchmarkBeatEventV0/timeout_Put-12                 1000000          1510 ns/op
    BenchmarkBeatEventV0/Object_Put_Key-12              2000000           631 ns/op
    BenchmarkBeatEventV0/timeout_Object_Put_Key-12      1000000          1252 ns/op
    BenchmarkBeatEventV0/Get-12                         2000000           750 ns/op
    BenchmarkBeatEventV0/timeout_Get-12                 1000000          1495 ns/op
    BenchmarkBeatEventV0/Get_Undefined_Key-12           1000000          1039 ns/op
    BenchmarkBeatEventV0/timeout_Get_Undefined_Key-12   1000000          2108 ns/op
    BenchmarkBeatEventV0/fields_get_key-12              2000000          1044 ns/op
    BenchmarkBeatEventV0/timeout_fields_get_key-12      1000000          2051 ns/op
    BenchmarkBeatEventV0/Get_@metadata-12               2000000           750 ns/op
    BenchmarkBeatEventV0/timeout_Get_@metadata-12       1000000          1745 ns/op
    BenchmarkBeatEventV0/Put_@metadata-12               1000000          1048 ns/op
    BenchmarkBeatEventV0/timeout_Put_@metadata-12       500000          2623 ns/op
    BenchmarkBeatEventV0/Delete_@metadata-12            2000000           842 ns/op
    BenchmarkBeatEventV0/timeout_Delete_@metadata-12    1000000          1629 ns/op
    BenchmarkBeatEventV0/Cancel-12                      2000000           759 ns/op
    BenchmarkBeatEventV0/timeout_Cancel-12              1000000          1329 ns/op
    BenchmarkBeatEventV0/Tag-12                         1000000          1189 ns/op
    BenchmarkBeatEventV0/timeout_Tag-12                 1000000          1973 ns/op
    BenchmarkBeatEventV0/AppendTo-12                    2000000     

--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -1389,6 +1389,12 @@ of the script.
 `tag_on_exception`:: Tag to add to events in case the Javascript code causes an
 exception while processing an event. Defaults to `_js_exception`.
 
+`timeout`:: This sets an execution timeout for the `process` function. When
+the `process` function takes longer than the `timeout` period the function
+is interrupted. You can set this option to prevent a script from running for
+too long (like preventing an infinite `while` loop). By default there is no
+timeout.
+
 [float]
 ==== Event API
 
