Fix s3 metricset timestamp and sqs queue name

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -1408,6 +1408,16 @@ The size of messages added to a queue.
 
 --
 
+*`aws.sqs.queue.name`*::
++
+--
+type: keyword
+
+SQS queue name
+
+
+--
+
 [[exported-fields-beat]]
 == Beat fields
 
