--- a/x-pack/metricbeat/module/aws/sqs/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/docs.asciidoc
@@ -8,4 +8,5 @@ Some specific AWS permissions are required for IAM user to collect AWS SQS metri
 ----
 cloudwatch:GetMetricData
 ec2:DescribeRegions
+sqs:ListQueues
 ----
