add .docker to configuration with docker
add .docker to configuration with docker

--- a/libbeat/docs/shared-docker.asciidoc
+++ b/libbeat/docs/shared-docker.asciidoc
@@ -116,7 +116,7 @@ ifeval::[("{beatname_lc}"=="filebeat") or ("{beatname_lc}"=="journalbeat")]
 docker run -d \
   --name={beatname_lc} \
   --user=root \
-  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.yml:ro" \
+  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.docker.yml:ro" \
   --volume="/var/lib/docker/containers:/var/lib/docker/containers:ro" \
   --volume="/var/run/docker.sock:/var/run/docker.sock:ro" \
   {dockerimage} {beatname_lc} -e -strict.perms=false \
@@ -130,7 +130,7 @@ ifeval::["{beatname_lc}"=="metricbeat"]
 docker run -d \
   --name={beatname_lc} \
   --user=root \
-  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.yml:ro" \
+  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.docker.yml:ro" \
   --volume="/var/run/docker.sock:/var/run/docker.sock:ro" \
   --volume="/sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro" \
   --volume="/proc:/hostfs/proc:ro" \
@@ -146,7 +146,7 @@ ifeval::["{beatname_lc}"=="packetbeat"]
 docker run -d \
   --name={beatname_lc} \
   --user={beatname_lc} \
-  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.yml:ro" \
+  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.docker.yml:ro" \
   --cap-add="NET_RAW" \
   --cap-add="NET_ADMIN" \
   --network=host \
@@ -162,7 +162,7 @@ ifeval::["{beatname_lc}"=="auditbeat"]
 docker run -d \
   --name={beatname_lc} \
   --user=root \
-  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.yml:ro" \
+  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.docker.yml:ro" \
   --cap-add="AUDIT_CONTROL" \
   --cap-add="AUDIT_READ" \
   --pid=host \
@@ -178,7 +178,7 @@ ifeval::["{beatname_lc}"=="heartbeat"]
 docker run -d \
   --name={beatname_lc} \
   --user={beatname_lc} \
-  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.yml:ro" \
+  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.docker.yml:ro" \
   {dockerimage} \
   --strict.perms=false -e \
   -E output.elasticsearch.hosts=["elasticsearch:9200"] <1> <2>
