Move fields.yml change to a separate PR

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -1319,17 +1319,17 @@ The elapsed per-request time from the first byte received to the last byte sent 
 *`aws.sqs.oldest_message_age.sec`*::
 +
 --
-type: scaled_float
+type: long
 
 The approximate age of the oldest non-deleted message in the queue.
 
 
 --
 
-*`aws.sqs.messages.delayed`*::
+*`aws.sqs.message.delayed`*::
 +
 --
-type: scaled_float
+type: long
 
 TThe number of messages in the queue that are delayed and not available for reading immediately.
 
@@ -1339,47 +1339,47 @@ TThe number of messages in the queue that are delayed and not available for read
 *`aws.sqs.messages.not_visible`*::
 +
 --
-type: scaled_float
+type: long
 
 The number of messages that are in flight.
 
 
 --
 
-*`aws.sqs.messages.visible`*::
+*`aws.sqs.message.visible`*::
 +
 --
-type: scaled_float
+type: long
 
 The number of messages available for retrieval from the queue.
 
 
 --
 
-*`aws.sqs.messages.deleted`*::
+*`aws.sqs.message.deleted`*::
 +
 --
-type: scaled_float
+type: long
 
 The number of messages deleted from the queue.
 
 
 --
 
-*`aws.sqs.messages.received`*::
+*`aws.sqs.message.received`*::
 +
 --
-type: scaled_float
+type: long
 
 The number of messages returned by calls to the ReceiveMessage action.
 
 
 --
 
-*`aws.sqs.messages.sent`*::
+*`aws.sqs.message.sent`*::
 +
 --
-type: scaled_float
+type: long
 
 The number of messages added to a queue.
 
@@ -1389,7 +1389,7 @@ The number of messages added to a queue.
 *`aws.sqs.empty_receives`*::
 +
 --
-type: scaled_float
+type: long
 
 The number of ReceiveMessage API calls that did not return a message.
 
