Add NATS Filebeat dashboard #11170
This PR is part of  #10071.

Co-Authored-By: Stamatis Katsaounis <katsaouniss@gmail.com>
Co-Authored-By: Michael Katsoulis <michaelkatsoulis88@gmail.com>

--- a/filebeat/docs/modules/nats.asciidoc
+++ b/filebeat/docs/modules/nats.asciidoc
@@ -21,7 +21,11 @@ The +{modulename}+ module was tested with logs from version v1.4.0.
 include::../include/running-modules.asciidoc[]
 
 [float]
-=== Example dashboard
+=== Dashboard
+
+The Nats module comes with a predefined dashboard. For example:
+
+image::./images/filebeat_nats_dashboard.png[]
 
 
 include::../include/configuring-intro.asciidoc[]
