Use PYTHON_EXE env var as the python interpreter
Setting the PYTHON_EXE environment variable causes new Python virtual environments
to be created using the specified interpreter. Both `make` and `mage` honor the
variable.

For example, `PYTHON_EXE=python2.7 make python-env`.

Add changelog

--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -37,3 +37,5 @@ The list below covers the major changes between 7.0.0-beta1 and master only.
 - Support for Logger in the Metricset base instance. {pull}11106[11106]
 - Introduce processing.Support to instance.Setting. This allows Beats to fully modify the event processing. {pull}10801[10801]
 - Filebeat modules can now use ingest pipelines in YAML format. {pull}11209[11209]
+- Added support for using PYTHON_EXE to control what Python interpreter is used
+  by `make` and `mage`. Example: `export PYTHON_EXE=python2.7`. {pull}11212[11212]
