--- a/heartbeat/docs/fields.asciidoc
+++ b/heartbeat/docs/fields.asciidoc
@@ -3757,12 +3757,12 @@ Kubernetes annotations map
 
 --
 
-*`kubernetes.replicaset`*::
+*`kubernetes.replicaset.name`*::
 +
 --
-type: object
+type: keyword
 
-Kubernetes replica-set map
+Kubernetes replica-set name
 
 
 --
