--- a/journalbeat/docs/fields.asciidoc
+++ b/journalbeat/docs/fields.asciidoc
@@ -4161,12 +4161,12 @@ Kubernetes annotations map
 
 --
 
-*`kubernetes.replicaset`*::
+*`kubernetes.replicaset.name`*::
 +
 --
-type: object
+type: keyword
 
-Kubernetes replica-set map
+Kubernetes replica-set name
 
 
 --
