--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -12083,12 +12083,12 @@ Kubernetes annotations map
 
 --
 
-*`kubernetes.replicaset`*::
+*`kubernetes.replicaset.name`*::
 +
 --
-type: object
+type: keyword
 
-Kubernetes replica-set map
+Kubernetes replica-set name
 
 
 --
