--- a/x-pack/functionbeat/docs/fields.asciidoc
+++ b/x-pack/functionbeat/docs/fields.asciidoc
@@ -3468,12 +3468,12 @@ Kubernetes annotations map
 
 --
 
-*`kubernetes.replicaset`*::
+*`kubernetes.replicaset.name`*::
 +
 --
-type: object
+type: keyword
 
-Kubernetes replica-set map
+Kubernetes replica-set name
 
 
 --
