--- a/heartbeat/docs/fields.asciidoc
+++ b/heartbeat/docs/fields.asciidoc
@@ -489,6 +489,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the client to the server.
 
 --
@@ -868,6 +870,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the destination to the source.
 
 --
@@ -1191,6 +1195,8 @@ The concept of a `dataset` (fileset / metricset) is used in Beats as a subset of
 +
 --
 type: long
+
+format: duration
 
 Duration of the event in nanoseconds.
 If event.start and event.end are known this value should be the difference between the end and start time.
@@ -2069,6 +2075,8 @@ type: long
 
 example: 368
 
+format: bytes
+
 Total bytes transferred in both directions.
 If `source.bytes` and `destination.bytes` are known, `network.bytes` is their sum.
 
@@ -2658,6 +2666,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the server to the client.
 
 --
@@ -2971,6 +2981,8 @@ Then it should be duplicated to `.ip` or `.domain`, depending on which one it is
 type: long
 
 example: 184
+
+format: bytes
 
 Bytes sent from the source to the destination.
 
