--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -4696,6 +4696,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the client to the server.
 
 --
@@ -5075,6 +5077,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the destination to the source.
 
 --
@@ -5398,6 +5402,8 @@ The concept of a `dataset` (fileset / metricset) is used in Beats as a subset of
 +
 --
 type: long
+
+format: duration
 
 Duration of the event in nanoseconds.
 If event.start and event.end are known this value should be the difference between the end and start time.
@@ -6276,6 +6282,8 @@ type: long
 
 example: 368
 
+format: bytes
+
 Total bytes transferred in both directions.
 If `source.bytes` and `destination.bytes` are known, `network.bytes` is their sum.
 
@@ -6865,6 +6873,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the server to the client.
 
 --
@@ -7178,6 +7188,8 @@ Then it should be duplicated to `.ip` or `.domain`, depending on which one it is
 type: long
 
 example: 184
+
+format: bytes
 
 Bytes sent from the source to the destination.
 
