--- a/x-pack/functionbeat/docs/fields.asciidoc
+++ b/x-pack/functionbeat/docs/fields.asciidoc
@@ -368,6 +368,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the client to the server.
 
 --
@@ -747,6 +749,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the destination to the source.
 
 --
@@ -1070,6 +1074,8 @@ The concept of a `dataset` (fileset / metricset) is used in Beats as a subset of
 +
 --
 type: long
+
+format: duration
 
 Duration of the event in nanoseconds.
 If event.start and event.end are known this value should be the difference between the end and start time.
@@ -1948,6 +1954,8 @@ type: long
 
 example: 368
 
+format: bytes
+
 Total bytes transferred in both directions.
 If `source.bytes` and `destination.bytes` are known, `network.bytes` is their sum.
 
@@ -2537,6 +2545,8 @@ type: long
 
 example: 184
 
+format: bytes
+
 Bytes sent from the server to the client.
 
 --
@@ -2850,6 +2860,8 @@ Then it should be duplicated to `.ip` or `.domain`, depending on which one it is
 type: long
 
 example: 184
+
+format: bytes
 
 Bytes sent from the source to the destination.
 
