--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -2748,6 +2748,8 @@ type: long
 
 example: 887
 
+format: bytes
+
 Size in bytes of the request body.
 
 --
@@ -2769,6 +2771,8 @@ The full HTTP request body.
 type: long
 
 example: 1437
+
+format: bytes
 
 Total size in bytes of the request (body and headers).
 
@@ -2804,6 +2808,8 @@ type: long
 
 example: 887
 
+format: bytes
+
 Size in bytes of the response body.
 
 --
@@ -2825,6 +2831,8 @@ The full HTTP response body.
 type: long
 
 example: 1437
+
+format: bytes
 
 Total size in bytes of the response (body and headers).
 
