--- a/journalbeat/docs/fields.asciidoc
+++ b/journalbeat/docs/fields.asciidoc
@@ -2491,6 +2491,8 @@ type: long
 
 example: 887
 
+format: bytes
+
 Size in bytes of the request body.
 
 --
@@ -2512,6 +2514,8 @@ The full HTTP request body.
 type: long
 
 example: 1437
+
+format: bytes
 
 Total size in bytes of the request (body and headers).
 
@@ -2547,6 +2551,8 @@ type: long
 
 example: 887
 
+format: bytes
+
 Size in bytes of the response body.
 
 --
@@ -2568,6 +2574,8 @@ The full HTTP response body.
 type: long
 
 example: 1437
+
+format: bytes
 
 Total size in bytes of the response (body and headers).
 
