--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -6121,6 +6121,8 @@ type: long
 
 example: 887
 
+format: bytes
+
 Size in bytes of the request body.
 
 --
@@ -6142,6 +6144,8 @@ The full HTTP request body.
 type: long
 
 example: 1437
+
+format: bytes
 
 Total size in bytes of the request (body and headers).
 
@@ -6177,6 +6181,8 @@ type: long
 
 example: 887
 
+format: bytes
+
 Size in bytes of the response body.
 
 --
@@ -6198,6 +6204,8 @@ The full HTTP response body.
 type: long
 
 example: 1437
+
+format: bytes
 
 Total size in bytes of the response (body and headers).
 
